# pySigma-backend-matano

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
sigma/backends/matano/: __init__.py  matano.py
sigma/pipelines/matano/: __init__.py  ecs_pipelines.py
tests/: test_backend_matano.py
tests/__snapshots__/: test_backend_matano.ambr
