[tool.poetry]
name = "pySigma-backend-matano"
version = "0.0.1"
description = "Matano backend for pySigma. Convert Sigma rules into Matano detections."
authors = ["Samrose Ahmed <samroseahmed@gmail.com>"]
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security"
]
repository = "https://github.com/matanolabs/pySigma-backend-matano"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.7"
black = "^22.8.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
syrupy = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
